# my_web_server

./: Cargo.toml  README.md  pre_build.rs
http/: Cargo.toml
http/src/: lib.rs  request.rs  response.rs
http_server/: Cargo.toml
http_server/src/: lib.rs
pool/: Cargo.toml
pool/src/: lib.rs  worker.rs
router/: Cargo.toml
router/src/: lib.rs
src/: main.rs
static/: landing_page.html
static_out/: favicon_ico.http  landing_page_html.http
